tests/test_assets/semantic/valid/definite_assignment/nested_function_non_capture.cog
global_value: i32 = 10;

outer::() -> i32 {
    LOCAL_CONSTANT :: 20;

    inner::() -> i32 {
        return global_value + LOCAL_CONSTANT;
    }

    return inner();
}
