tests/test_assets/semantic/invalid/pointers/integer_zero_is_not_null.cog
takes_pointer::(pointer: i32*) -> void {
}

returns_pointer::() -> i32* {
    return 0;
}

ZERO_POINTER: i32* : 0;

test::() -> void {
    pointer: i32* = null;
    pointer = 0;

    invalid_initializer: i32* = 0;

    takes_pointer(0);
}
